--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -6,7 +6,7 @@
     </div>
 
     <menu class="sidebar-menu">
-      <li class="menu-items"><a class="menu-links" href="{{site.baseurl}}/">Post</a></li>
+      <li class="menu-items"><a class="menu-links" href="{{site.baseurl}}/">Posts</a></li>
       <li class="menu-items"><a class="menu-links" href="{{site.baseurl}}/about/">About</a></li>
     </menu>
 
